# rip-cpu

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linter.yaml  main.yaml
hex/: dhry.hex  dhry_run1000_v0_0_5.hex.rip  fib.c  fib.hex  ram.S
hex/riscv-tests/: rv32ui-p-add.hex  rv32ui-p-addi.hex  rv32ui-p-and.hex  rv32ui-p-andi.hex  rv32ui-p-auipc.hex  rv32ui-p-beq.hex  rv32ui-p-bge.hex  rv32ui-p-bgeu.hex  rv32ui-p-blt.hex  rv32ui-p-bltu.hex  rv32ui-p-bne.hex  rv32ui-p-fence_i.hex  rv32ui-p-jal.hex  rv32ui-p-jalr.hex  rv32ui-p-lb.hex  rv32ui-p-lbu.hex  rv32ui-p-lh.hex  rv32ui-p-lhu.hex  rv32ui-p-lui.hex  rv32ui-p-lw.hex  rv32ui-p-ma_data.hex  rv32ui-p-or.hex  rv32ui-p-ori.hex  rv32ui-p-sb.hex  rv32ui-p-sh.hex  rv32ui-p-simple.hex  rv32ui-p-sll.hex  rv32ui-p-slli.hex  rv32ui-p-slt.hex  rv32ui-p-slti.hex  rv32ui-p-sltiu.hex  rv32ui-p-sltu.hex  rv32ui-p-sra.hex  rv32ui-p-srai.hex  rv32ui-p-srl.hex  rv32ui-p-srli.hex  rv32ui-p-sub.hex  rv32ui-p-sw.hex  rv32ui-p-xor.hex  rv32ui-p-xori.hex  (+8 more)
src/: alu.sv  bram.sv  core.sv  csr.sv  decode.sv  instructions.svh  pc.sv  ram.sv  regfile.sv  rip_2r1w_bram.sv  rip_2r1w_bram_byte.sv  rip_alu.sv  rip_axi_interface.sv  rip_axi_interface_const.sv  rip_axi_master.sv  rip_branch_predictor.sv  rip_branch_predictor_const.sv  rip_common.sv  rip_config.sv  rip_const.sv  rip_const.svh  rip_core.sv  rip_csr.sv  rip_decode.sv  rip_fifo_async.sv  rip_fifo_sync.sv  rip_inst.svh  rip_memory.sv  rip_memory_access.sv  rip_memory_control_unit.sv  rip_memory_management_unit.sv  rip_regfile.sv  rip_ring_oscillator.sv  rip_ring_oscillator_monitor.sv  rip_type.sv  rip_type.svh
src/board/: rip_core_wrapper.sv  rip_core_wrapper_wrapper.v
src/stub/: rip_mmu_stub.sv
tb/board/: README.md  rip_pseudo_core.sv  rip_pseudo_core_mmu.sv  rip_pseudo_core_wrapper.sv  rip_pseudo_core_wrapper_wrapper.v
tb/module/: rip_axi_master_tb.sv  rip_memory_management_unit_tb.sv
test/: CMakeLists.txt  Makefile  dump_parser.py  test_alu.cpp  test_alu.hpp  test_core.cpp  test_decode.cpp  test_decode.hpp  test_dump.cpp  test_inst.cpp  test_inst.hpp  test_riscv_tests.cpp
